feat: add translation

--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
       <nav class="navbar">
         <div class="menu menu--margin">
           <a href="#">
-            <span class="menu__item-label">Для клиентов</span>
+            <span class="menu__item-label">For clients</span>
             <span class="menu__item-arrow menu__item-arrow--padding"></span>
           </a>
           <a href="#">
-            <span class="menu__item-label">Для партнёров</span>
+            <span class="menu__item-label">For partners</span>
             <span class="menu__item-arrow menu__item-arrow--padding"></span>
           </a>
           <a href="#">
-            <span class="menu__item-label">Аренда авто с водителем</span>
+            <span class="menu__item-label">Car rental with driver</span>
           </a>
           <a href="#">
-            <span class="menu__item-label">Детский трансфер</span>
+            <span class="menu__item-label">Baby transfer</span>
           </a>
         </div>
         <div class="dropdown">
           <a class="dropdown-currency dropdown-currency--margin">
-            <span class="dropdown-currency__label">RUB</span>
+            <span class="dropdown-currency__label">USD</span>
           </a>
           <a class="dropdown-country">
             <span class="dropdown-country__flag"></span>
           </a>
           <div class="dropdown__separator"></div>
-          <a class="dropdown__help" target="_blank" href="/help">Помощь</a>
-          <button class="login-btn">Войти</button>
+          <a class="dropdown__help" target="_blank" href="/help">Help</a>
+          <button class="login-btn">Sign in</button>
         </div>
         <div class="burger"></div>
       </nav>
@@ -64,43 +64,43 @@
             </div>
           </div>
           <div class="introduction introduction--margin">
-            <p>Евгений, расскажите о себе, чтобы мы могли сделать ваше путешествие максимально комфортным и выгодным.</p>
-            <p>Все ответы строго конфиденциальны и не передаются третьим лицам.</p>
+            <p>Alex, tell us about yourself so that we can make your trip as comfortable and profitable as possible.</p>
+            <p>All answers are strictly confidential and will not be passed on to third parties.</p>
           </div>
           <div class="question-wrapper">
             <div class="question-block">
-              <p class="question">1. Вы сами бронируете жилье, покупаете билеты на самолет, страховку?</p>
+              <p class="question">1. Do you book accommodation yourself, buy plane tickets, insurance?</p>
               <div class="question-buttons__wrapper">
-                <div class="question-button question-button__active"><p>Нет</p></div>
-                <div class="question-button"><p>Частично: иногда прибегаю к услугам агентов</p></div>
-                <div class="question-button"><p>Да</p></div>
+                <div class="question-button question-button__active"><p>No</p></div>
+                <div class="question-button"><p>Partially: sometimes I use the services of agents</p></div>
+                <div class="question-button"><p>Yes</p></div>
               </div>
             </div>
             <div class="question-block">
-              <p class="question">2. Как вы оцениваете ваш уровень английского языка?</p>
+              <p class="question">2. How do you rate your English knowledge?</p>
               <div class="question-buttons__wrapper">
-                <div class="question-button"><p>Не знаю английский</p></div>
-                <div class="question-button"><p>Могу изъясниться в аэропорту, отеле</p></div>
-                <div class="question-button"><p>Свободно говорю и понимаю</p></div>
+                <div class="question-button"><p>I do not know English</p></div>
+                <div class="question-button"><p>I can express myself at the airport, hotel</p></div>
+                <div class="question-button"><p>I speak and understand fluently</p></div>
               </div>
             </div>
             <div class="question-block">
-              <p class="question">3. Вы пользуетесь онлайн-сервисами и тревел-приложениями за рубежом?</p>
+              <p class="question">3. Do you use online services and travel applications abroad?</p>
               <div class="question-buttons__wrapper">
-                <div class="question-button"><p>Нет, плохо в этом разбираюсь</p></div>
-                <div class="question-button question-button--max-width"><p> Стараюсь все заказать заранее, но при необходимости разберусь</p></div>
-                <div class="question-button"><p>Всегда без проблем</p></div>
+                <div class="question-button"><p>No, I'm not good at it.</p></div>
+                <div class="question-button question-button--max-width"><p>I try to order everything in advance, but I will figure it out if necessary.</p></div>
+                <div class="question-button"><p>Always no problem</p></div>
               </div>
             </div>
             <div class="question-block">
-              <p class="question">4. В каком городе вы проживаете</p>
+              <p class="question">4. What city do you live in?</p>
               <form method="GET" action="#" name="city">
-                <input type="text" name="city" class="question-block__city" placeholder="Москва" required>
+                <input type="text" name="city" class="question-block__city" placeholder="New-York" required>
               </form>
             </div>
           </div>
           <div class="next">
-            <button class="next-btn">Далее</button>
+            <button class="next-btn">Next</button>
           </div>
         </div>
       </article>
@@ -108,7 +108,7 @@
         <div class="nav-arrows">
           <div class="back-wrapper" id='back'>
             <div class="back-arrow"></div>
-            <p class="back-text">Назад</p>
+            <p class="back-text">Back</p>
           </div>
           <div class="close" id="close"></div>
         </div>
@@ -128,21 +128,21 @@
             </div>
           </div>
           <div class="introduction introduction--margin">
-            <p>Расскажите о предстоящей поездке</p>
-            <p>Все ответы строго конфиденциальны и не передаются третьим лицам.</p>
+            <p>Tell us about your upcoming trip</p>
+            <p>ВAll responses are strictly confidential and will not be passed on to third parties.</p>
           </div>
           <div class="question-wrapper">
             <div class="question-block question-block--margin">
-              <p class="question">1. На каком этапе путешествия вы находитесь?</p>
+              <p class="question">1. What stage of the journey are you at?</p>
               <div class="question-buttons__wrapper">
-                <div class="question-button question-button__active" id='prepare'><p>Собираюсь в поездку</p></div>
-                <div class="question-button" id="trip"><p>Уже в поездке/путешествии</p></div>
-                <div class="question-button" id="back"><p>Возвращаюсь домой</p></div>
+                <div class="question-button question-button__active" id='prepare'><p>I'm going on a trip</p></div>
+                <div class="question-button" id="trip"><p>Already on a trip/journey</p></div>
+                <div class="question-button" id="back"><p>Coming home</p></div>
               </div>
             </div>
           </div>
           <div class="next">
-            <button class="next-btn">Далее</button>
+            <button class="next-btn">Next</button>
           </div>
         </div>
       </article>
@@ -150,7 +150,7 @@
         <div class="nav-arrows">
           <div class="back-wrapper" id='back'>
             <div class="back-arrow"></div>
-            <p class="back-text">Назад</p>
+            <p class="back-text">Back</p>
           </div>
           <div class="close" id="close"></div>
         </div>
@@ -171,52 +171,52 @@
           </div>
           <div class="question-wrapper">
             <div class="question-block">
-              <p class="question">1. Это ваша первая поездка в (место назначения)?</p>
+              <p class="question">1. Is this your first trip to (destination)?</p>
               <div class="question-buttons__wrapper">
-                <div class="question-button question-button__active"><p>Да</p></div>
-                <div class="question-button"><p>Нет, регулярно сюда приезжаю</p></div>
-                <div class="question-button"><p>Нет, был пару раз</p></div>
+                <div class="question-button question-button__active"><p>Yes</p></div>
+                <div class="question-button"><p>No, I come here regularly.</p></div>
+                <div class="question-button"><p>No, I've been a couple of times.</p></div>
               </div>
             </div>
             <div class="question-block">
-              <p class="question">2. На сколько дней вы едете?</p>
+              <p class="question">2. How many days are you traveling?</p>
               <div class="question-buttons__wrapper">
-                <div class="question-button"><p>2 — 3 дня</p></div>
-                <div class="question-button"><p>На неделю</p></div>
-                <div class="question-button"><p>10 — 20 дней</p></div>
-                <div class="question-button"><p>Более месяца</p></div>
+                <div class="question-button"><p>2 — 3 days</p></div>
+                <div class="question-button"><p>For a week</p></div>
+                <div class="question-button"><p>10 — 20 days</p></div>
+                <div class="question-button"><p>More than a month</p></div>
               </div>
             </div>
             <div class="question-block">
-              <p class="question">3. Какие у вас интересы в поездке?</p>
+              <p class="question">3. What are your travel interests??</p>
               <div class="question-buttons__wrapper">
-                <div class="question-button"><p>Посетить музеи</p></div>
-                <div class="question-button"><p>Сходить в модные кафе</p></div>
-                <div class="question-button"><p>Экстремальные аттракционы</p></div>
-                <div class="question-button"><p>Лежать на пляже</p></div>
-                <div class="question-button"><p>Работа</p></div>
+                <div class="question-button"><p>Visit museums</p></div>
+                <div class="question-button"><p>Go to trendy cafes</p></div>
+                <div class="question-button"><p>Extreme rides</p></div>
+                <div class="question-button"><p>Lie on the beach</p></div>
+                <div class="question-button"><p>Work</p></div>
               </div>
             </div>
             <div class="question-block">
-              <p class="question">4. С кем вы едете в поездку</p>
+              <p class="question">4. Who are you traveling with?</p>
               <div class="question-buttons__wrapper">
-                <div class="question-button"><p>Один</p></div>
-                <div class="question-button"><p>Со второй половинкой</p></div>
-                <div class="question-button"><p>Всей семьей</p></div>
-                <div class="question-button"><p>Компанией</p></div>
-                <div class="question-button"><p>Один/одна с ребенком</p></div>
+                <div class="question-button"><p>Alone</p></div>
+                <div class="question-button"><p>With wife/husband</p></div>
+                <div class="question-button"><p>The whole family</p></div>
+                <div class="question-button"><p>With company</p></div>
+                <div class="question-button"><p>Alone with a child</p></div>
               </div>
             </div>
             <div class="question-block">
-              <p class="question question--no-margin">5. В какой город держите путь?</p>
-              <p class="question__confidential">Все ответы строго конфиденциальны и не передаются третьим лицам.</p>
+              <p class="question question--no-margin">5. Which city are you heading to?</p>
+              <p class="question__confidential">All responses are strictly confidential and will not be passed on to third parties..</p>
               <form method="GET" action="#" name="city">
                 <input type="text" name="city" class="question-block__city" placeholder="Barcelona" required>
               </form>
             </div>
           </div>
           <div class="next">
-            <button class="next-btn">Отправить</button>
+            <button class="next-btn">Submit</button>
           </div>
         </div>
       </article>
@@ -224,7 +224,7 @@
         <div class="nav-arrows">
           <div class="back-wrapper" id='back'>
             <div class="back-arrow"></div>
-            <p class="back-text">Назад</p>
+            <p class="back-text">Back</p>
           </div>
           <div class="close" id="close"></div>
         </div>
@@ -245,36 +245,36 @@
           </div>
           <div class="question-wrapper">
             <div class="question-block">
-              <p class="question">1. Какие у вас интересы в поездке?</p>
+              <p class="question">1. What are your travel interests?</p>
               <div class="question-buttons__wrapper">
-                <div class="question-button question-button__active"><p>Посетить музеи</p></div>
-                <div class="question-button"><p>Посмотреть достопримечательности</p></div>
-                <div class="question-button"><p>Сходить в модные кафе</p></div>
-                <div class="question-button"><p>Экстремальные аттракционны</p></div>
-                <div class="question-button"><p>Лежать на пляже</p></div>
-                <div class="question-button"><p>Работа</p></div>
+                <div class="question-button question-button__active"><p>Visit museums</p></div>
+                <div class="question-button"><p>View attractions</p></div>
+                <div class="question-button"><p>Go to trendy cafes</p></div>
+                <div class="question-button"><p>Extreme rides</p></div>
+                <div class="question-button"><p>Lie on the beach</p></div>
+                <div class="question-button"><p>Work</p></div>
               </div>
             </div>
             <div class="question-block">
-              <p class="question">2. С кем вы едете в поездку</p>
+              <p class="question">2. Who are you traveling with?</p>
               <div class="question-buttons__wrapper">
-                <div class="question-button"><p>Один</p></div>
-                <div class="question-button"><p>Со второй половинкой</p></div>
-                <div class="question-button"><p>Всей семьей</p></div>
-                <div class="question-button"><p>Компанией</p></div>
-                <div class="question-button"><p>Один/одна с ребенком</p></div>
+                <div class="question-button"><p>Alone</p></div>
+                <div class="question-button"><p>With wife/husband</p></div>
+                <div class="question-button"><p>The whole family</p></div>
+                <div class="question-button"><p>With company</p></div>
+                <div class="question-button"><p>Alone with a child</p></div>
               </div>
             </div>
             <div class="question-block">
-              <p class="question question--no-margin">3. В какой город держите путь?</p>
-              <p class="question__confidential">Например, если у вас трансфер/такси в Барселону, а потом вы планируете ехать в Салоу, то напишите Салоу.</p>
+              <p class="question question--no-margin">3. Which city are you heading to?</p>
+              <p class="question__confidential">For example, if you have a transfer / taxi to Barcelona and then you plan to go to Salou, then write Salou.</p>
               <form method="GET" action="#" name="city">
                 <input type="text" name="city" class="question-block__city" placeholder="Barcelona" required>
               </form>
             </div>
           </div>
           <div class="next">
-            <button class="next-btn">Отправить</button>
+            <button class="next-btn">Submit</button>
           </div>
         </div>
       </article>
@@ -282,7 +282,7 @@
         <div class="nav-arrows">
           <div class="back-wrapper" id='back'>
             <div class="back-arrow"></div>
-            <p class="back-text">Назад</p>
+            <p class="back-text">Back</p>
           </div>
           <div class="close" id="close"></div>
         </div>
@@ -303,25 +303,25 @@
           </div>
           <div class="question-wrapper">
             <div class="question-block">
-              <p class="question">1. С кем вы едете в поездку</p>
+              <p class="question">1. Who are you traveling with?</p>
               <div class="question-buttons__wrapper">
-                <div class="question-button question-button__active"><p>Один</p></div>
-                <div class="question-button"><p>Со второй половинкой</p></div>
-                <div class="question-button"><p>Всей семьей</p></div>
-                <div class="question-button"><p>Компанией</p></div>
-                <div class="question-button"><p>Один/одна с ребенком</p></div>
+                <div class="question-button question-button__active"><p>Alone</p></div>
+                <div class="question-button"><p>With my wife/husband</p></div>
+                <div class="question-button"><p>The whole family</p></div>
+                <div class="question-button"><p>With company</p></div>
+                <div class="question-button"><p>Alone with a child</p></div>
               </div>
             </div>
             <div class="question-block">
-              <p class="question question--no-margin">2. В какой город держите путь?</p>
-              <p class="question__confidential">Например, если у вас трансфер/такси в Барселону, а потом вы планируете ехать в Салоу, то напишите Салоу.</p>
+              <p class="question question--no-margin">2. Which city are you heading to?</p>
+              <p class="question__confidential">For example, if you have a transfer / taxi to Barcelona, ​​and then you plan to go to Salou, then write to Salou.</p>
               <form method="GET" action="#" name="city">
                 <input type="text" name="city" class="question-block__city" placeholder="Barcelona" required>
               </form>
             </div>
           </div>
           <div class="next">
-            <button class="next-btn">Отправить</button>
+            <button class="next-btn">Submit</button>
           </div>
         </div>
       </article>
@@ -329,15 +329,15 @@
         <div class="checkout__wrapper">
           <div class="heart">
             <div class="heart__img"></div>
-            <p class="heart__text">Спасибо!</p>
+            <p class="heart__text">Thanks for your answers!</p>
           </div>
           <div class="bye">
-            <p>Все ответы записаны.</p>
-            <p>Мы отправим вам на почту варианты экскурсий и других услуг по выгодной цене,</p>
-            <p>которые подходят вашему типу отдыха.</p>
+            <p>All responses recorded.</p>
+            <p>We will send you by mail options for excursions that suit you,</p>
+            <p>as well as other services, at a bargain price!</p>
           </div>
           <div class="next">
-            <button class="next-btn">Закрыть</button>
+            <button class="next-btn">Close</button>
           </div>
         </div>
       </article>
